基本形完成

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </div>
           <div class="profile-wrapper">
             <div class="profile-image">
-              <img src="img/AWE8jmy3nsnxrCx1607301611_1607301636.png">
+              <img src="asset/img/AWE8jmy3nsnxrCx1607301611_1607301636.png">
             </div>
             <div class="profile-des">
               <ul class="profile-des-list">
@@ -37,7 +37,7 @@
                 <li>出身 : 広島県</li>
                 <li>生年月日 : 1988年2月22日</li>
                 <li>趣味 : 合気道</li>
-                <li>その他 : 従業員40人規模のコンビニで店長をしていました。医薬品販売の経験もあるので薬の知識が割とあります。</li>
+                <li>その他 : コンビニで働きながらプログラミングの勉強をしています。5年間店長をしていました。医薬品販売の経験もあるので薬の知識が割とあります。</li>
                 <li></li>
               </ul>
             </div>
@@ -95,21 +95,33 @@
           </div>
           <div class="works-wrapper">
             <figure class="work-card">
-              <img src="" alt="">
-              <figcaption>
-                
+              <img src="asset/img/6FB00889-FDE0-42CB-BC9D-CA219D3F0B5B_1_105_c.jpeg" alt="">
+              <figcaption class="work-caption">
+                <p class="work-caption-title">ポートフォリオ</p>
+                <p class="work-caption-info">このポートフォリオサイトです。</p>
+                <p class="work-caption-info">HTML/Sass</p>
+                <p class="work-caption-info">レスポンシブデザインに対応しています。</p>
+                <p class="work-caption-url"><a href="">github</a></p>
               </figcaption>
             </figure>
             <figure class="work-card">
-              <img src="" alt="">
-              <figcaption>
-
+              <a href="https://my-react-chatapp.web.app/login" target="_blank"><img src="asset/img/770C577D-6677-46F5-A607-489E9A16755F_1_105_c.jpeg" alt=""></a>
+              <figcaption class="work-caption">
+                <p class="work-caption-title">LINE風チャットアプリ</p>
+                <p class="work-caption-info">YouTube APIとReactを使ったYouTubeクローン</p>
+                <p class="work-caption-info">HTML/CSS/React/Firebase</p>
+                <p class="work-caption-info">Firebaseを使った認証機能の作成に挑戦しました。</p>
+                <p class="work-caption-url"><a href="">github</a></p>
               </figcaption>
             </figure>
             <figure class="work-card">
-              <img src="" alt="">
-              <figcaption>
-
+              <a href="https://yuki-shitamatsu.github.io/youtube-react/" target="_blank"><img src="asset/img/5809E2C0-1981-4B9D-8242-6768E5E84737_1_105_c.jpeg" alt=""></a>
+              <figcaption class="work-caption">
+                <p class="work-caption-title">React-YouTube</p>
+                <p class="work-caption-info">YouTube APIとReactを使ったYouTubeクローン</p>
+                <p class="work-caption-info">HTML/Sass/React</p>
+                <p class="work-caption-info">APIを使う練習で作りました。</p>
+                <p class="work-caption-url"><a href="">github</a></p>
               </figcaption>
             </figure>
           </div>
