--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Portfolio</title>
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css" type="text/css" media="all" />
+  <link rel="icon" type="image/png" sizes="16x16" href="asset/img/favicon.png">
 </head>
 <body>
   <div id="wrapper">
@@ -18,7 +19,7 @@
         <li><a href="#profile">PROFILE</a></li>
         <li><a href="#skill">SKILL</a></li>
         <li><a href="#works">WORKS</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="#contact">GitHub</a></li>
       </ul>
     </nav>
     <main id="contents">
@@ -101,7 +102,7 @@
                 <p class="work-caption-info">このポートフォリオサイトです。</p>
                 <p class="work-caption-info">HTML/Sass</p>
                 <p class="work-caption-info">レスポンシブデザインに対応しています。</p>
-                <p class="work-caption-url"><a href="">github</a></p>
+                <p class="work-caption-url"><a href="https://github.com/yuki-shitamatsu/my-portfolio" target="_blank">github</a></p>
               </figcaption>
             </figure>
             <figure class="work-card">
@@ -111,7 +112,7 @@
                 <p class="work-caption-info">YouTube APIとReactを使ったYouTubeクローン</p>
                 <p class="work-caption-info">HTML/CSS/React/Firebase</p>
                 <p class="work-caption-info">Firebaseを使った認証機能の作成に挑戦しました。</p>
-                <p class="work-caption-url"><a href="">github</a></p>
+                <p class="work-caption-url"><a href="https://github.com/yuki-shitamatsu/my-chatapp" target="_blank">github</a></p>
               </figcaption>
             </figure>
             <figure class="work-card">
@@ -121,23 +122,34 @@
                 <p class="work-caption-info">YouTube APIとReactを使ったYouTubeクローン</p>
                 <p class="work-caption-info">HTML/Sass/React</p>
                 <p class="work-caption-info">APIを使う練習で作りました。</p>
-                <p class="work-caption-url"><a href="">github</a></p>
+                <p class="work-caption-url"><a href="https://github.com/yuki-shitamatsu/youtube-react" target="_blank">github</a></p>
               </figcaption>
             </figure>
+          </div>
+          <div class="works-movie-des">
+            <p>↓アプリの動きを短い動画にしています！</p>
+          </div>
+          <div class="works-movie-wrapper">
+            <div class="works-movie-card">
+              <video src="asset/video/mychatapp.mp4" controls></video>
+            </div>
+            <div class="works-movie-card">
+              <video src="asset/video/react-youtube.mp4" controls></video>
+            </div>
           </div>
         </div>
       </section>
       <section id="contact" class="section">
         <div class="inner">
           <div class="section-title-block">
-            <h2 class="section-title contact-title">CONTACT</h2>
+            <h2 class="section-title contact-title">GitHub</h2>
           </div>
           <div class="contact-wrapper">
             <ul class="contact-list">
-              <li><a href="https://twitter.com/mashamatsu1"><i class="fab fa-twitter faa-ring animated-hover"></i></a></li>
-              <li><a href=""><i class="fab fa-github faa-ring animated-hover"></i></a></li>
+              <!-- <li><a href="https://twitter.com/mashamatsu1"><i class="fab fa-twitter faa-ring animated-hover"></i></a></li> -->
+              <li><a href="https://github.com/yuki-shitamatsu" target="_blank"><i class="fab fa-github faa-ring animated-hover"></i></a></li>
             </ul>
-            <p class="contact-desc">TwitterのDMの方からご連絡お願いします！</p>
+            <p class="contact-desc">GitHubページへのリンクです!!</p>
           </div>
         </div>
       </section>
@@ -150,7 +162,7 @@
           <li><a href="#profile">PROFILE</a></li>
           <li><a href="#skill">SKILL</a></li>
           <li><a href="#works">WORKS</a></li>
-          <li><a href="#contact">CONTACT</a></li>
+          <li><a href="#contact">GitHub</a></li>
         </ul>
       </nav>
       <p class="copyright">Copyright©︎Yuki Shitamatsu. All Rights Reserved.</p>
