--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
           </div>
           <div class="works-movie-wrapper">
             <div class="works-movie-card">
-              <video src="asset/video/mychatapp.mp4" controls playsinline autoplay muted></video>
+              <video src="asset/video/mychatapp.mp4" autoplay loop muted playsinline></video>
             </div>
             <div class="works-movie-card">
-              <video src="asset/video/react-youtube.mp4" playsinline autoplay muted controls></video>
+              <video src="asset/video/react-youtube.mp4" autoplay loop muted playsinline></video>
             </div>
           </div>
         </div>
